# arb

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  docker-compose.yml.bak-cpu-limit-20260511
docs/constructure/: SOURCE
infra/polymarket/: .gitignore  README.md  start-polymarket-env.sh
infra/postgres/: init.sql
infra/scripts/: setup-veth.sh  start-poly-executor.sh  start.sh
rust/arb-proto/: Cargo.toml
rust/arb-proto/src/: lib.rs
rust/collector-rs/: Cargo.toml  Dockerfile
rust/collector-rs/src/: main.rs
rust/strategy-rs/: Cargo.toml  Dockerfile
rust/strategy-rs/src/: main.rs
scripts/: compare_shadow_outputs.py  setup-poly-secret.py
services/executor-kalshi/: Dockerfile  requirements.txt
services/executor-kalshi/src/: kalshi_client.py  main.py
services/executor-polymarket/: Dockerfile  requirements.txt
services/executor-polymarket/src/: main.py  poly_client.py
services/resolver/: Dockerfile  requirements.txt
services/resolver/src/: embedder.py  main.py  matcher.py  test_main.py  test_matcher.py
services/validator/: Dockerfile  requirements.txt
services/validator/src/: llm.py  main.py  test_llm.py
shared/: config.py  models.py  redis_keys.py
