[package]
name = "collector-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arb-proto = { path = "../arb-proto" }
base64 = "0.22"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
redis = { version = "0.27", features = ["aio", "connection-manager", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
